k8s/base/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: mesh-six
  labels:
    app: dashboard
    app.kubernetes.io/part-of: mesh-six
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: dashboard
