k8s/base/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: mesh-six
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mesh-six.bto.bar`) && !PathPrefix(`/webhooks`)
      kind: Rule
      services:
        - name: dashboard
          port: 80
  tls:
    certResolver: letsencrypt
